--- a/style.css
+++ b/style.css
@@ -143,10 +143,20 @@ body {
 
 /*  --------------- media quires ---------------  */
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width:1024px){
   .period-div {
     justify-content: space-around;
   }
+  .header {
+    width: 90%;
+    margin: 32px auto;
+    
+  }
+  .card {
+    width: 60%;
+    margin: 32px auto;
+    
+}
 }
 @media (min-width: 1280px) {
   .container {
